# Products.GenericSetup

./: .bzrignore  .coveragerc  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  README.txt  buildout.cfg  buildout4.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
GenericSetup/: components.py  context.py  metadata.py  testing.py  upgrade.py  version.txt
GenericSetup/MailHost/: exportimport.py
GenericSetup/MailHost/tests/: test_exportimport.py
GenericSetup/PluginIndexes/: __init__.py
GenericSetup/PythonScripts/: configure.zcml  exportimport.py
GenericSetup/ZCTextIndex/: __init__.py
GenericSetup/bbb/: __init__.py  registry.py  tool.py
GenericSetup/browser/: utils.py
GenericSetup/doc/SampleSite/: __init__.py
GenericSetup/tests/: conformance.py  faux_objects.py  test_components.py  test_profile_metadata.py  test_registry.py  test_rolemap.py  test_tool.py
GenericSetup/www/: setup_upgrades.zpt
Products/GenericSetup/: CHANGES.txt  DEPENDENCIES.txt  README.txt  __init__.py  components.py  configure.zcml  content.py  context.py  differ.py  events.py  exceptions.py  interfaces.py  meta.zcml  metadata.py  permissions.py  registry.py  rolemap.py  testing.py  tool.py  upgrade.py  utils.py  version.txt  zcml.py
Products/GenericSetup/MailHost/: __init__.py  exportimport.py
Products/GenericSetup/OFSP/: __init__.py  exportimport.py
Products/GenericSetup/PageTemplates/: __init__.py  configure.zcml  exportimport.py  interfaces.py
Products/GenericSetup/PluginIndexes/: __init__.py  configure.zcml  exportimport.py
Products/GenericSetup/PythonScripts/: __init__.py  exportimport.py  interfaces.py
Products/GenericSetup/ZCTextIndex/: __init__.py  exportimport.py
Products/GenericSetup/ZCatalog/: __init__.py  exportimport.py
Products/GenericSetup/bbb/: __init__.py  registry.py  tool.py
Products/GenericSetup/browser/: __init__.py  components.pt  components.py  configure.zcml  manage.py  utils.py
Products/GenericSetup/doc/: configurators.txt
Products/GenericSetup/tests/: __init__.py  common.py  conformance.py  faux_objects.py  test_components.py  test_content.py  test_context.py  test_differ.py  test_events.py  test_profile_metadata.py  test_registry.py  test_rolemap.py  test_stepzcml.py  test_tool.py  test_utils.py  test_zcml.py  tests.py  upgrade.txt
Products/GenericSetup/www/: setup_upgrades.zpt  sutExportSteps.zpt  sutFullImport.zpt  (+5 more)
docs/: CHANGES.rst  CREDITS.rst  HISTORY.rst  Makefile  conf.py  glossary.rst  handlers.rst  index.rst  install.rst  profiles.rst
(+67 files in other folders)
